--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<version>6.1.5.Final</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
