Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ default.sender=marcelojbcosta@gmail.com
 default.recipient=marcelojbcosta@gmail.com
 
 
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000 
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
 spring.mail.password=
