Salvando primeiro arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,15 @@ default.sender=marcelojbcosta@gmail.com
 default.recipient=marcelojbcosta@gmail.com
 
 
+
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000 
+jwt.expiration=86400000 
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-ionic-spring
+s3.region=sa-east-1
+
 
 
 spring.mail.host=smtp.gmail.com
