--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,13 @@ default.recipient=marcelojbcosta@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000 
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIAUDOW7AHFPADBA4PQ
+aws.secret_access_key=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
 s3.bucket=curso-ionic-spring
 s3.region=sa-east-1
 
+
+img.prefix.client.profile=cp
 
 
 spring.mail.host=smtp.gmail.com
