--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,16 @@ default.recipient=marcelojbcosta@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000 
 
-aws.access_key_id=AKIAUDOW7AHFPADBA4PQ
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=curso-ionic-spring
 s3.region=sa-east-1
 
 
 img.prefix.client.profile=cp
+
+img.profile.size=200
+
 
 
 spring.mail.host=smtp.gmail.com
